--- a/session2/ex4/Visualization.ipynb
+++ b/session2/ex4/Visualization.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = yt.load(\"../../plt07000\")"
+    "ds = yt.load(\"~/gpu-workshop-exercises/gpu128_maxgrid128_plt10000\")"
    ]
   },
   {
