update jupyter notebook

--- a/session2/ex4/Visualization.ipynb
+++ b/session2/ex4/Visualization.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = yt.load(\"~/gpu-workshop-exercises/gpu128_maxgrid128_plt10000\")"
+    "ds = yt.load(\"~/gpu-workshop-exercises/gpu128_maxgrid128_plt12987\")"
    ]
   },
   {
@@ -39,7 +39,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pyenv_gpu",
    "language": "python",
    "name": "python3"
   },
